   command, as no configuration is available (including the "ssh_command" option) until
   bootstrapping completes.
 * #794: Fix a traceback when the "repositories" option contains both strings and key/value pairs.
 * #800: Add configured repository labels to the JSON output for all actions.
 * #802: The "check --force" flag now runs checks even if "check" is in "skip_actions".
 * When logging commands that borgmatic executes, log the environment variables that
   borgmatic sets for those commands. (But don't log their values, since they often contain
   passwords.)

1.8.5
 * #701: Add a "skip_actions" option to skip running particular actions, handy for append-only or
   checkless configurations. See the documentation for more information:
   https://torsion.org/borgmatic/docs/how-to/set-up-backups/#skipping-actions
 * #701: Deprecate the "disabled" value for the "checks" option in favor of the new "skip_actions"
   option.
 * #745: Constants now apply to included configuration, not just the file doing the includes. As a
   side effect of this change, constants no longer apply to option names and only substitute into
   configuration values.
 * #779: Add a "--match-archives" flag to the "check" action for selecting the archives to check,
   overriding the existing "archive_name_format" and "match_archives" options in configuration.
 * #779: Only parse "--override" values as complex data types when they're for options of those
   types.
 * #782: Fix environment variable interpolation within configured repository paths.
 * #782: Add configuration constant overriding via the existing "--override" flag.
 * #783: Upgrade ruamel.yaml dependency to support version 0.18.x.
 * #784: Drop support for Python 3.7, which has been end-of-lifed.

1.8.4
 * #715: Add a monitoring hook for sending backup status to a variety of monitoring services via the
   Apprise library. See the documentation for more information: